# hippocampus_msgs

./: CMakeLists.txt  package.xml
msg/: ActuatorControls.msg  DepthEKFStamped.msg  DistanceControlDebug.msg  GantryConfig.msg  GantryMotorLimitSwitches.msg  GantryMotorPosition.msg  GantryMotorVelocity.msg  GantryPosition.msg  GantryVelocity.msg  JoystickControlCommand.msg  MixerFeedthrough.msg  PathFollowerTarget.msg  PidDebug.msg  PoseIdStamped.msg  WheelSpeedStamped.msg
srv/: GantryGetFloat.srv  GantrySetFloat.srv  GetBool.srv  GetInt.srv
